# RiemPy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
riemmpy/: __init__.py
riemmpy/geo_diff/: manifold.py  submanifolds.py
riempy/: __init__.py  geo_diff.py
test/: riemmpy-test.py  sympy-test.py
