[project]
name = "riemmpy"
version = "0.1.1"
description="A symbolic differential geometry toolkit for general relativity and curved manifolds."
author="Edoardo Tesei"
author_email="eddote6@protonmail.com"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "sympy>=1.13.3",
]
